# Version 0.0.2
- API clean and simplification

# Version 0.0.1
- Initial Version
- BLS12-381 G1 Simple SWU